# janice

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  release-please-config.json  rustfmt.toml
.github/workflows/: ci.yml  release-please.yml  release.yml
benches/: diff_scans.rs  directory_walk.rs  hashing.rs
src/: core.rs  hash.rs  io.rs  lib.rs  main.rs
tests/: unit_hash.rs  unit_rename.rs
