[package]
name = "janice"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "A file sync tool that refuses to waste your time"
repository = "https://github.com/procoperr/janice"
readme = "README.md"
keywords = ["sync", "backup", "file-sync", "blake3", "rsync"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
ahash = "0.8"
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
owo-colors = "4.1"
rayon = "1.8"
sha2 = { version = "0.10", optional = true }
strsim = "0.11"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
tempfile = "3.8"

[features]
default = ["blake3"]
blake3 = []
sha256 = ["sha2"]

[[bin]]
name = "jan"
path = "src/main.rs"

[[bench]]
name = "hashing"
harness = false

[[bench]]
name = "directory_walk"
harness = false

[[bench]]
name = "diff_scans"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

[profile.bench]
inherits = "release"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
